# Trovis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alerts.py  asker.py  billing.py  chatgpt-app-submission.json  database.py  describer.py  email_send.py  fixtures_close_seam.json  loops.py  main.py  mcp_server.py  models.py  pricing_sync.py  railway.toml  requirements.txt  test_activity_feed.py  test_agent_gate.py  test_agent_records.py  test_agentic_ask.py  test_billing_gate.py  test_billing_portal.py  test_connect_ask.py  test_drift.py  test_instance_counting.py  test_loop_close_seam.py  test_loop_handoff_names.py  test_loop_immutability.py  test_loop_ingest.py  test_loop_reclassify.py  test_loop_state.py  test_loop_story.py  test_loop_titles.py  test_loops_api.py  test_rename_dualread.py  test_tool_participants.py  (+2 more)
frontend/: .gitignore  README.md  index.html  node_modules  package-lock.json  package.json
frontend/src/: AddAgent.jsx  AgentDetail.jsx  AgentRegistry.jsx  App.jsx  Ask.jsx  AskPill.jsx  AskVisuals.jsx  ConnectGuide.jsx  ConnectionsMap.jsx  CostPage.jsx  Dashboard.jsx  Fleet.jsx  Icons.jsx  Login.jsx  LoopBoard.jsx  LoopFeed.jsx  Onboarding.jsx  Settings.jsx  Sparkline.jsx  StoryView.jsx  StuckPage.jsx  Team.jsx  ThemeProvider.jsx  TrovisLanding.jsx  TrovisLegal.jsx  UpgradeModal.jsx  WorkFeedPage.jsx  WorkPage.jsx  WorkflowCanvas.jsx  WorkflowCreateModal.jsx  WorkflowEditor.jsx  WorkflowList.jsx  WorkflowPage.jsx  WorkflowStepEditor.jsx  Workflows.jsx  api.js  collapseSteps.js  loops.js  main.jsx  migrate.js  (+4 more)
frontend/test/: loops.test.mjs
oversee-agents/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_smoke.py
oversee-agents/oversee/: __init__.py  anthropic.py  claude_agent_sdk.py  core.py  exporter.py  hermes.py  propagation.py  registration.py
oversee-agents/oversee/hermes_plugin/: __init__.py  plugin.yaml
oversee-openclaw-plugin/: .gitignore  README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json
trovis-agents/: README.md  pyproject.toml  test_openai_usage.py  test_smoke.py
trovis-agents/trovis/: __init__.py  anthropic.py  claude_agent_sdk.py  core.py  exporter.py  hermes.py  propagation.py  registration.py
trovis-agents/trovis/hermes_plugin/: __init__.py  plugin.yaml
trovis-openclaw-plugin/: .gitignore  README.md  index.ts  openclaw.plugin.json  package.json
trovis-openclaw-plugin/test/: loop-attrs.test.mjs  plugin-entry-stub.ts
