[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oversee-agents"
version = "0.1.0"
description = "Connect your OpenAI agents to Oversee — two lines of code for full observability"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Oversee" }]
keywords = ["openai", "agents", "observability", "opentelemetry", "oversee"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "openai-agents-opentelemetry>=0.2.0",
]

[project.optional-dependencies]
dev = ["openai-agents>=0.0.1"]

[project.urls]
Homepage = "https://oversee.dev"
Repository = "https://github.com/Alexn32/Oversee"

[tool.setuptools.packages.find]
include = ["oversee*"]
