[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trovis-agents"
version = "0.4.0"
description = "Connect your agents to Trovis — two lines of code for full observability"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Trovis" }]
keywords = ["openai", "agents", "observability", "opentelemetry", "trovis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "requests>=2.28.0",
]

# Per-platform extras so users only install what they need:
#   pip install trovis-agents[openai]      → OpenAI Agents SDK support
#   pip install trovis-agents[anthropic]   → Claude Managed Agents support
#   pip install trovis-agents[hermes]      → Hermes Agent plugin (no extra
#                                             deps — Hermes provides the ctx)
#   pip install trovis-agents[all]         → every platform's extras
[project.optional-dependencies]
openai = [
    "openai-agents-opentelemetry>=0.2.0",
]
anthropic = [
    "anthropic>=0.50.0",
]
claude-agent-sdk = [
    "claude-agent-sdk>=0.1.0",
]
hermes = []
all = [
    "openai-agents-opentelemetry>=0.2.0",
    "anthropic>=0.50.0",
    "claude-agent-sdk>=0.1.0",
]
dev = [
    "openai-agents>=0.0.1",
    "openai-agents-opentelemetry>=0.2.0",
    "anthropic>=0.50.0",
    "claude-agent-sdk>=0.1.0",
]

# Hermes discovers plugins via Python entry points. Pointing at
# `trovis.hermes_plugin` exposes that package's `register` function
# to Hermes' loader.
[project.entry-points."hermes_agent.plugins"]
trovis = "trovis.hermes_plugin"

[project.urls]
Homepage = "https://oversee.dev"
Repository = "https://github.com/Alexn32/Oversee"

[tool.setuptools.packages.find]
include = ["trovis*"]

# Ship plugin.yaml inside the wheel. Without this, the Hermes
# manifest gets dropped at build time and the plugin loader can't
# find it post-install.
[tool.setuptools.package-data]
"trovis.hermes_plugin" = ["plugin.yaml"]
